{
  "version": 4,
  "terraform_version": "1.6.3",
  "serial": 674,
  "lineage": "66e3b90f-fd04-6163-32b3-b890f733d1eb",
  "resources": [
    {
      "module": "module.load-balancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "loading",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:050216613249:loadbalancer/app/twotier/9496b8ec0a8fb515",
            "arn_suffix": "app/twotier/9496b8ec0a8fb515",
            "desync_mitigation_mode": "defensive",
            "dns_name": "twotier-789982174.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:050216613249:loadbalancer/app/twotier/9496b8ec0a8fb515",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "twotier",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0bb88440c53b1cb4d"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0601a0241cc5bfe46"
              },
              {
                "subnet_id": "subnet-0d359469d1a938f28"
              }
            ],
            "subnets": [
              "subnet-0601a0241cc5bfe46",
              "subnet-0d359469d1a938f28"
            ],
            "tags": {
              "Environment": "loading"
            },
            "tags_all": {
              "Environment": "loading"
            },
            "vpc_id": "vpc-0ce6a72910fc47195",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.vpc.aws_security_group.Alb",
            "module.vpc.aws_subnet.public1",
            "module.vpc.aws_subnet.public2",
            "module.vpc.aws_vpc.threetier"
          ]
        }
      ]
    },
    {
      "module": "module.load-balancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "webload",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:050216613249:loadbalancer/app/webload/5ac850fb7e49679a",
            "arn_suffix": "app/webload/5ac850fb7e49679a",
            "desync_mitigation_mode": "defensive",
            "dns_name": "webload-1686852814.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:050216613249:loadbalancer/app/webload/5ac850fb7e49679a",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "webload",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0173774ceedcf5b39"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-079d6a0c7797f56c7"
              },
              {
                "subnet_id": "subnet-0897e97358f99982a"
              }
            ],
            "subnets": [
              "subnet-079d6a0c7797f56c7",
              "subnet-0897e97358f99982a"
            ],
            "tags": {
              "Environment": "webload"
            },
            "tags_all": {
              "Environment": "webload"
            },
            "vpc_id": "vpc-0ce6a72910fc47195",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.vpc.aws_security_group.Wlb",
            "module.vpc.aws_subnet.public3",
            "module.vpc.aws_subnet.public4",
            "module.vpc.aws_vpc.threetier"
          ]
        }
      ]
    },
    {
      "module": "module.load-balancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "loading-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:050216613249:listener/app/twotier/9496b8ec0a8fb515/9e2ad61eb8801f93",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:050216613249:targetgroup/loading-target/dde041c0de545a08",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:050216613249:listener/app/twotier/9496b8ec0a8fb515/9e2ad61eb8801f93",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:050216613249:loadbalancer/app/twotier/9496b8ec0a8fb515",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.load-balancer.aws_lb.loading",
            "module.load-balancer.aws_lb_target_group.load-target",
            "module.vpc.aws_security_group.Alb",
            "module.vpc.aws_subnet.public1",
            "module.vpc.aws_subnet.public2",
            "module.vpc.aws_vpc.threetier"
          ]
        }
      ]
    },
    {
      "module": "module.load-balancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "web-loading-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:050216613249:listener/app/webload/5ac850fb7e49679a/b963c872a87f7f25",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:050216613249:targetgroup/web-loading-target/3b6b46c9efd681ce",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:050216613249:listener/app/webload/5ac850fb7e49679a/b963c872a87f7f25",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:050216613249:loadbalancer/app/webload/5ac850fb7e49679a",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.load-balancer.aws_lb.webload",
            "module.load-balancer.aws_lb_target_group.web-load-target",
            "module.vpc.aws_security_group.Wlb",
            "module.vpc.aws_subnet.public3",
            "module.vpc.aws_subnet.public4",
            "module.vpc.aws_vpc.threetier"
          ]
        }
      ]
    },
    {
      "module": "module.load-balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "load-target",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:050216613249:targetgroup/loading-target/dde041c0de545a08",
            "arn_suffix": "targetgroup/loading-target/dde041c0de545a08",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:050216613249:targetgroup/loading-target/dde041c0de545a08",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "loading-target",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ce6a72910fc47195"
          },
          "dependencies": [
            "module.vpc.aws_vpc.threetier"
          ]
        }
      ]
    },
    {
      "module": "module.load-balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "web-load-target",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:050216613249:targetgroup/web-loading-target/3b6b46c9efd681ce",
            "arn_suffix": "targetgroup/web-loading-target/3b6b46c9efd681ce",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:050216613249:targetgroup/web-loading-target/3b6b46c9efd681ce",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "web-loading-target",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ce6a72910fc47195"
          },
          "dependencies": [
            "module.vpc.aws_vpc.threetier"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d532755fe58a08cc",
            "association_id": "eipassoc-05538e96d42bb4adf",
            "domain": "vpc",
            "id": "eipalloc-0d532755fe58a08cc",
            "network_border_group": "us-east-1",
            "network_interface": "eni-03e4fe3533c32cdaf",
            "private_dns": "ip-10-0-1-156.ec2.internal",
            "private_ip": "10.0.1.156",
            "public_dns": "ec2-18-215-213-38.compute-1.amazonaws.com",
            "public_ip": "18.215.213.38",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip"
            },
            "tags_all": {
              "Name": "eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:050216613249:internet-gateway/igw-0518502d4cd5fcc0f",
            "id": "igw-0518502d4cd5fcc0f",
            "owner_id": "050216613249",
            "tags": {
              "Name": "IGW"
            },
            "tags_all": {
              "Name": "IGW"
            },
            "vpc_id": "vpc-0ce6a72910fc47195"
          },
          "dependencies": [
            "module.vpc.aws_vpc.threetier"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d532755fe58a08cc",
            "association_id": "eipassoc-05538e96d42bb4adf",
            "connectivity_type": "public",
            "id": "nat-04c25bcb079d6a534",
            "network_interface_id": "eni-03e4fe3533c32cdaf",
            "private_ip": "10.0.1.156",
            "public_ip": "18.215.213.38",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d359469d1a938f28",
            "tags": {
              "Name": "natgat"
            },
            "tags_all": {
              "Name": "natgat"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.eip_nat",
            "module.vpc.aws_subnet.public1",
            "module.vpc.aws_vpc.threetier"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "privateroute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:050216613249:route-table/rtb-0cc7791a2733ca467",
            "id": "rtb-0cc7791a2733ca467",
            "owner_id": "050216613249",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-04c25bcb079d6a534",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ThreetierPrivate"
            },
            "tags_all": {
              "Name": "ThreetierPrivate"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ce6a72910fc47195"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.eip_nat",
            "module.vpc.aws_nat_gateway.natgat",
            "module.vpc.aws_subnet.public1",
            "module.vpc.aws_vpc.threetier"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "publicroute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:050216613249:route-table/rtb-08baad53df5c489a7",
            "id": "rtb-08baad53df5c489a7",
            "owner_id": "050216613249",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0518502d4cd5fcc0f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ThreetierPublic"
            },
            "tags_all": {
              "Name": "ThreetierPublic"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ce6a72910fc47195"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.threetier"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04e15e5c3416c2725",
            "route_table_id": "rtb-08baad53df5c489a7",
            "subnet_id": "subnet-0d359469d1a938f28"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.publicroute",
            "module.vpc.aws_subnet.public1",
            "module.vpc.aws_vpc.threetier"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01de62bc371a3c3df",
            "route_table_id": "rtb-08baad53df5c489a7",
            "subnet_id": "subnet-0601a0241cc5bfe46"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.publicroute",
            "module.vpc.aws_subnet.public2",
            "module.vpc.aws_vpc.threetier"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-049882e1c7adbe4b7",
            "route_table_id": "rtb-08baad53df5c489a7",
            "subnet_id": "subnet-079d6a0c7797f56c7"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.publicroute",
            "module.vpc.aws_subnet.public3",
            "module.vpc.aws_vpc.threetier"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "d",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-090807284c4aeb2b9",
            "route_table_id": "rtb-08baad53df5c489a7",
            "subnet_id": "subnet-0897e97358f99982a"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.publicroute",
            "module.vpc.aws_subnet.public4",
            "module.vpc.aws_vpc.threetier"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "e",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-057aa4cbc3ca1c123",
            "route_table_id": "rtb-0cc7791a2733ca467",
            "subnet_id": "subnet-0fd9a8bf7ee02bd3b"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip_nat",
            "module.vpc.aws_nat_gateway.natgat",
            "module.vpc.aws_route_table.privateroute",
            "module.vpc.aws_subnet.private1",
            "module.vpc.aws_subnet.public1",
            "module.vpc.aws_vpc.threetier"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "f",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-041f1108b587e594c",
            "route_table_id": "rtb-0cc7791a2733ca467",
            "subnet_id": "subnet-0d7d4f396e5d8d2ad"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip_nat",
            "module.vpc.aws_nat_gateway.natgat",
            "module.vpc.aws_route_table.privateroute",
            "module.vpc.aws_subnet.private2",
            "module.vpc.aws_subnet.public1",
            "module.vpc.aws_vpc.threetier"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:050216613249:security-group/sg-0bb88440c53b1cb4d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bb88440c53b1cb4d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Load balancer to route to the internett",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb_vpc-0ce6a72910fc47195",
            "name_prefix": "",
            "owner_id": "050216613249",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Alb-Sg"
            },
            "tags_all": {
              "Name": "Alb-Sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ce6a72910fc47195"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.threetier"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Appserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:050216613249:security-group/sg-0e16e9489f37c6283",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e16e9489f37c6283",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow SSH from our Bastion Host",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00aae26479cd6150e"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Allow load balancer to route to internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0bb88440c53b1cb4d"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ap_vpc-0ce6a72910fc47195",
            "name_prefix": "",
            "owner_id": "050216613249",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "App-Web-ServerSg"
            },
            "tags_all": {
              "Name": "App-Web-ServerSg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ce6a72910fc47195"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.Alb",
            "module.vpc.aws_security_group.Bastion",
            "module.vpc.aws_vpc.threetier"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:050216613249:security-group/sg-00aae26479cd6150e",
            "description": "Our Bastion Host security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00aae26479cd6150e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sg_vpc-0ce6a72910fc47195",
            "name_prefix": "",
            "owner_id": "050216613249",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Twotier-Sg"
            },
            "tags_all": {
              "Name": "Twotier-Sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ce6a72910fc47195"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.threetier"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "DB-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:050216613249:security-group/sg-08f75039e6f40ec0e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08f75039e6f40ec0e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "database security group",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e16e9489f37c6283"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "dbsg_vpc-0ce6a72910fc47195",
            "name_prefix": "",
            "owner_id": "050216613249",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Db-Sg"
            },
            "tags_all": {
              "Name": "Db-Sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ce6a72910fc47195"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.Alb",
            "module.vpc.aws_security_group.Appserver",
            "module.vpc.aws_security_group.Bastion",
            "module.vpc.aws_vpc.threetier"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:050216613249:security-group/sg-0a12538840ff56fe5",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a12538840ff56fe5",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow SSH from our Bastion Host",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00aae26479cd6150e"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Allow load balancer to route to internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0173774ceedcf5b39"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "wb_vpc-0ce6a72910fc47195",
            "name_prefix": "",
            "owner_id": "050216613249",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Web-ServerSg"
            },
            "tags_all": {
              "Name": "Web-ServerSg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ce6a72910fc47195"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.Bastion",
            "module.vpc.aws_security_group.Wlb",
            "module.vpc.aws_vpc.threetier"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Wlb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:050216613249:security-group/sg-0173774ceedcf5b39",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0173774ceedcf5b39",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Load balancer to route to the internett",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "wlb_vpc-0ce6a72910fc47195",
            "name_prefix": "",
            "owner_id": "050216613249",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Wlb-Sg"
            },
            "tags_all": {
              "Name": "Wlb-Sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ce6a72910fc47195"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.threetier"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:050216613249:subnet/subnet-0fd9a8bf7ee02bd3b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fd9a8bf7ee02bd3b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "050216613249",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private1"
            },
            "tags_all": {
              "Name": "private1"
            },
            "vpc_id": "vpc-0ce6a72910fc47195"
          },
          "dependencies": [
            "module.vpc.aws_vpc.threetier"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:050216613249:subnet/subnet-0d7d4f396e5d8d2ad",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d7d4f396e5d8d2ad",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "050216613249",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private2"
            },
            "tags_all": {
              "Name": "private2"
            },
            "vpc_id": "vpc-0ce6a72910fc47195"
          },
          "dependencies": [
            "module.vpc.aws_vpc.threetier"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:050216613249:subnet/subnet-0d359469d1a938f28",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d359469d1a938f28",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "050216613249",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public1"
            },
            "tags_all": {
              "Name": "public1"
            },
            "vpc_id": "vpc-0ce6a72910fc47195"
          },
          "dependencies": [
            "module.vpc.aws_vpc.threetier"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:050216613249:subnet/subnet-0601a0241cc5bfe46",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0601a0241cc5bfe46",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "050216613249",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public2"
            },
            "tags_all": {
              "Name": "public2"
            },
            "vpc_id": "vpc-0ce6a72910fc47195"
          },
          "dependencies": [
            "module.vpc.aws_vpc.threetier"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:050216613249:subnet/subnet-079d6a0c7797f56c7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-079d6a0c7797f56c7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "050216613249",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public3"
            },
            "tags_all": {
              "Name": "public3"
            },
            "vpc_id": "vpc-0ce6a72910fc47195"
          },
          "dependencies": [
            "module.vpc.aws_vpc.threetier"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:050216613249:subnet/subnet-0897e97358f99982a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0897e97358f99982a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "050216613249",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public4"
            },
            "tags_all": {
              "Name": "public4"
            },
            "vpc_id": "vpc-0ce6a72910fc47195"
          },
          "dependencies": [
            "module.vpc.aws_vpc.threetier"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "threetier",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:050216613249:vpc/vpc-0ce6a72910fc47195",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b2d6132d09dd8d9d",
            "default_route_table_id": "rtb-0c44f7691206664f4",
            "default_security_group_id": "sg-04f16b6de229aa243",
            "dhcp_options_id": "dopt-09788021be67c34ed",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ce6a72910fc47195",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c44f7691206664f4",
            "owner_id": "050216613249",
            "tags": {
              "Name": "threeTier_Badejo"
            },
            "tags_all": {
              "Name": "threeTier_Badejo"
            }
          }
        }
      ]
    }
  ]
}